--- a/Chip8/Chip8.vcxproj
+++ b/Chip8/Chip8.vcxproj
@@ -149,7 +149,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\SDL2\lib\x86\SDL2.dll" />
+    <ClInclude Include="Chip8.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
