--- a/Chip8/Chip8.vcxproj.filters
+++ b/Chip8/Chip8.vcxproj.filters
@@ -23,6 +23,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\SDL2\lib\x86\SDL2.dll" />
+    <ClInclude Include="Chip8.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
